test_regress/t/t_order_clkinst_bad.out
%Warning-IMPERFECTSCH: t/t_order_clkinst.v:19:16: Imperfect scheduling of variable: 't.c1_start'
   19 |    reg         c1_start; initial c1_start = 0;
      |                ^~~~~~~~
                       ... For warning description see https://verilator.org/warn/IMPERFECTSCH?v=latest
                       ... Use "/* verilator lint_off IMPERFECTSCH */" and lint_on around source to disable this message.
%Warning-IMPERFECTSCH: t/t_order_clkinst.v:20:16: Imperfect scheduling of variable: 't.c1_count'
   20 |    wire [31:0] c1_count;
      |                ^~~~~~~~
%Warning-IMPERFECTSCH: t/t_order_clkinst.v:24:16: Imperfect scheduling of variable: 't.s2_count'
   24 |    wire [31:0] s2_count;
      |                ^~~~~~~~
%Warning-IMPERFECTSCH: t/t_order_clkinst.v:28:16: Imperfect scheduling of variable: 't.c3_count'
   28 |    wire [31:0] c3_count;
      |                ^~~~~~~~
%Warning-IMPERFECTSCH: t/t_order_clkinst.v:72:28: Imperfect scheduling of variable: 't.c1.runner'
   72 |    reg [31:0]    runnerm1, runner; initial runner = 0;
      |                            ^~~~~~
%Warning-IMPERFECTSCH: t/t_order_clkinst.v:101:28: Imperfect scheduling of variable: 't.s2.runner'
  101 |    reg [31:0]    runnerm1, runner; initial runner = 0;
      |                            ^~~~~~
%Warning-IMPERFECTSCH: t/t_order_clkinst.v:72:28: Imperfect scheduling of variable: 't.c3.runner'
   72 |    reg [31:0]    runnerm1, runner; initial runner = 0;
      |                            ^~~~~~
%Error: Exiting due to
